k8s/security/falco.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: falco
